copy files from b5edb7bda95df73edf4facba0b96f41707670205

--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,17 @@ msvc_libxml2/
 msvc_soqt/
 msvc_ode/
 msvc_soqt/
+
+src/
+.project
+.pydevproject
+*#*
+*~*
+.settings/
+3rdparty/
+myrelpath.pyc
+python/Doxyfile 
+*.pyc
+*.log
+*.out
+test/.openravetest
