--- a/python/openrave.py.in
+++ b/python/openrave.py.in
@@ -22,7 +22,7 @@ from types import ModuleType
 from numpy import *
 from optparse import OptionParser
 
-__builtins__.__openravepy_version__ = '@OPENRAVE_SOVERSION@'
+#__builtins__.__openravepy_version__ = '@OPENRAVE_SOVERSION@'
 
 try:
     import openravepy
